ebook_service/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore-ns
spec:
  ingressClassName: nginx  # This specifies that NGINX should handle this ingress
  rules:
    - host: "34.105.63.125.nip.io"  # The host for your application
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: web-bff-svc-lb
                port:
                  number: 8080
